--- a/oyibest-properties/oyibest-properties/tsconfig.json
+++ b/oyibest-properties/oyibest-properties/tsconfig.json
@@ -13,7 +13,7 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
-    "resolveJsonModule": true,
+    "resolveJson+.Module": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
