--- a/oyibest-properties/package.json
+++ b/oyibest-properties/package.json
@@ -9,35 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.12.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.2.0",
-    "@types/leaflet": "^1.9.16",
-    "cloudinary": "^2.6.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@types/leaflet": "^1.9.8",
+    "cloudinary": "^2.0.1",
     "cloudinary-react": "^1.8.1",
     "cross-env": "^7.0.3",
-    "firebase": "^11.4.0",
-    "framer-motion": "^12.4.12",
+    "firebase": "^10.8.0",
+    "framer-motion": "^11.0.3",
     "leaflet": "^1.9.4",
-    "next": "15.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-error-boundary": "^5.0.0",
-    "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0",
-    "react-leaflet": "^5.0.0",
-    "react-loading-skeleton": "^3.5.0"
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
+    "react-loading-skeleton": "^3.3.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint-config-next": "15.2.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^20.11.16",
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
