--- a/oyibest-properties/package.json
+++ b/oyibest-properties/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build --no-lint",
-    "start": "next start",
+    "start": "PORT=10000 next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
@@ -40,5 +40,8 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.19.0"
   }
 }
