--- a/oyibest-properties/render.yaml
+++ b/oyibest-properties/render.yaml
@@ -7,9 +7,13 @@ services:
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
-        value: 18.x
+        value: 18.19.0
       - key: NODE_ENV
-        value: production
+        value: "production"
+      - key: NEXT_PUBLIC_NODE_ENV
+        value: "production"
+      - key: PORT
+        value: 10000
       - key: NEXT_PUBLIC_FIREBASE_API_KEY
         sync: false
       - key: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
@@ -29,4 +33,6 @@ services:
       - key: NEXT_PUBLIC_CLOUDINARY_API_KEY
         sync: false
       - key: CLOUDINARY_API_SECRET
-        sync: false 
+        sync: false
+    healthCheckPath: /health
+    autoDeploy: true 
