Enhance Oyibest Properties configuration; updated start script to allow dynamic port assignment, removed hardcoded port from environment variables in render.yaml, and improved health check response with additional uptime and timestamp information in route.ts for better monitoring.

--- a/oyibest-properties/package.json
+++ b/oyibest-properties/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build --no-lint",
-    "start": "PORT=10000 next start -p $PORT",
+    "start": "next start -p ${PORT:-10000} -H 0.0.0.0",
     "lint": "next lint"
   },
   "dependencies": {
