--- a/oyibest-properties/render.yaml
+++ b/oyibest-properties/render.yaml
@@ -12,8 +12,6 @@ services:
         value: "production"
       - key: NEXT_PUBLIC_NODE_ENV
         value: "production"
-      - key: PORT
-        value: 10000
       - key: NEXT_PUBLIC_FIREBASE_API_KEY
         sync: false
       - key: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
@@ -35,4 +33,5 @@ services:
       - key: CLOUDINARY_API_SECRET
         sync: false
     healthCheckPath: /health
+    healthCheckTimeout: 300
     autoDeploy: true 
