Add configuration files and update project structure
- Introduced .node-version and .npmrc files to enforce Node.js version and npm settings.
- Updated package dependencies, including upgrading Firebase and Next.js versions.
- Refactored next.config.js to improve webpack configuration.
- Renamed project from "oyibest-properties" to "onyibest-properties" across various files.
- Removed obsolete files and directories related to the previous project structure.
- Updated manifest.json and robots.txt for the new project name and sitemap.
- Added health check route for deployment readiness.

--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,17 @@
 services:
   - type: web
-    name: oyibest-properties
+    name: onyibest-properties
     env: node
-    rootDir: oyibest-properties
+    rootDir: .
     buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
+      - key: NODE_VERSION
+        value: 18.19.0
       - key: NODE_ENV
-        value: production
+        value: "production"
+      - key: NEXT_PUBLIC_NODE_ENV
+        value: "production"
       - key: NEXT_PUBLIC_FIREBASE_API_KEY
         sync: false
       - key: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
@@ -27,4 +31,7 @@ services:
       - key: NEXT_PUBLIC_CLOUDINARY_API_KEY
         sync: false
       - key: CLOUDINARY_API_SECRET
-        sync: false 
+        sync: false
+    healthCheckPath: /health
+    healthCheckTimeout: 300
+    autoDeploy: true 
