--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Oyibest Properties",
-  "short_name": "Oyibest",
-  "description": "Find your dream property or land with Oyibest Properties",
+  "name": "Onyibest Properties",
+  "short_name": "Onyibest",
+  "description": "Find your dream property or land with Onyibest Properties",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -13,19 +13,14 @@
       "type": "image/svg+xml"
     },
     {
-      "src": "/favicon.ico",
-      "sizes": "48x48",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "/icon-192.png",
+      "src": "/icon-192.svg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/svg+xml"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/icon-512.svg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/svg+xml"
     }
   ]
 } 
