--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: onyibest-properties
     env: node
-    rootDir: .
-    buildCommand: npm install && npm run build
+    rootDir: onyibest-properties
+    buildCommand: cd onyibest-properties && npm install && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
