--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: web
-    name: onyibest-properties
+    name: oyibest-properties
     env: node
-    rootDir: onyibest-properties
-    buildCommand: cd onyibest-properties && npm install && npm run build
+    buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
