--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: oyibest-properties
     env: node
+    repo: https://github.com/EricStephen12/oyibest-properties.git
+    branch: main
     buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
